--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
   },
   "homepage": "https://github.com/antonpalermo/todo-app#readme",
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.3",
+    "@prisma/client": "^3.11.1",
     "next": "^12.1.1",
+    "next-auth": "^4.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
@@ -28,6 +31,7 @@
     "@types/react": "^17.0.43",
     "eslint": "8.12.0",
     "eslint-config-next": "12.1.1",
+    "prisma": "^3.11.1",
     "typescript": "^4.6.3"
   }
 }
