--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/antonpalermo/todo-app#readme",
   "dependencies": {
+    "@fontsource/inter": "^4.5.7",
     "@next-auth/prisma-adapter": "^1.0.3",
     "@prisma/client": "^3.11.1",
     "next": "^12.1.1",
@@ -29,9 +30,12 @@
   "devDependencies": {
     "@types/node": "^17.0.23",
     "@types/react": "^17.0.43",
+    "autoprefixer": "^10.4.4",
     "eslint": "8.12.0",
     "eslint-config-next": "12.1.1",
+    "postcss": "^8.4.12",
     "prisma": "^3.11.1",
+    "tailwindcss": "^3.0.23",
     "typescript": "^4.6.3"
   }
 }
