--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "@fontsource/inter": "^4.5.7",
     "@next-auth/prisma-adapter": "^1.0.3",
     "@prisma/client": "^3.11.1",
+    "formik": "^2.2.9",
     "next": "^12.1.1",
     "next-auth": "^4.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.0",
     "@types/node": "^17.0.23",
     "@types/react": "^17.0.43",
     "autoprefixer": "^10.4.4",
